--- a/plum.opam
+++ b/plum.opam
@@ -9,7 +9,7 @@ homepage: "https://github.com/kalyani-tt/plum"
 bug-reports: "https://github.com/kalyani-tt/plum/issues"
 depends: [
   "ocaml"
-  "dune" {>= "3.7"}
+  "dune" {>= "2.9"}
   "odoc" {with-doc}
 ]
 build: [
@@ -21,9 +21,11 @@ build: [
     name
     "-j"
     jobs
+    "--promote-install-files=false"
     "@install"
     "@runtest" {with-test}
     "@doc" {with-doc}
   ]
+  ["dune" "install" "-p" name "--create-install-files" name]
 ]
 dev-repo: "git+https://github.com/kalyani-tt/plum.git"
